[package]
name = "mock-runner"
edition = "2021"
version = "0.1.0"

[dependencies]
clap = "3"
serde_json = "1.0"
tracing = "0.1"

[dependencies.aggregator]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.bus-mapping]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.eth-types]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.external-tracer]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.geth-utils]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.halo2_proofs]
git = "https://github.com/scroll-tech/halo2.git"
branch = "v1.0"
features = []

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.mock]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = []

[dependencies.prover]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = ["parallel_syn", "scroll", "shanghai", "test"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.zkevm-circuits]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "556fc285ef56d401e47eb5a5dc0e725442d19b0e"
features = ["test"]
default-features = false

[features]
chunk-prove = ["prover/test", "parallel_syn", "scroll", "shanghai"]
default = ["parallel_syn", "shanghai", "scroll"]
inner-prove = ["prover/test", "parallel_syn", "scroll", "shanghai"]
parallel_syn = ["halo2_proofs/parallel_syn", "zkevm-circuits/parallel_syn", "prover?/parallel_syn"]
scroll = ["bus-mapping/scroll", "eth-types/scroll", "external-tracer/scroll", "mock/scroll", "zkevm-circuits/scroll", "prover?/scroll"]
shanghai = ["bus-mapping/shanghai", "eth-types/shanghai", "mock/shanghai", "zkevm-circuits/shanghai", "prover?/shanghai"]

[patch.crates-io.ethers-core]
git = "https://github.com/scroll-tech/ethers-rs.git"
branch = "v2.0.7"
features = []

[patch.crates-io.ethers-signers]
git = "https://github.com/scroll-tech/ethers-rs.git"
branch = "v2.0.7"
features = []

[patch."https://github.com/privacy-scaling-explorations/halo2.git".halo2_proofs]
git = "https://github.com/scroll-tech/halo2.git"
branch = "v1.0"
features = []

[patch."https://github.com/privacy-scaling-explorations/poseidon.git".poseidon]
git = "https://github.com/scroll-tech/poseidon.git"
branch = "main"
features = []

[[bin]]
path = "src/main.rs"
name = "mock-runner"
edition = "2021"
required-features = []
