[package]
name = "mock-runner"
edition = "2021"
version = "0.1.0"

[dependencies]
clap = "4"
serde_json = "1.0"
tracing = "0.1"

[dependencies.aggregator]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.bus-mapping]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.eth-types]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.external-tracer]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.geth-utils]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.halo2_proofs]
git = "https://github.com/scroll-tech/halo2.git"
branch = "v1.1"
features = []

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.mock]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = []

[dependencies.prover]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = ["parallel_syn", "scroll", "test"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.zkevm-circuits]
git = "https://github.com/scroll-tech/zkevm-circuits.git"
rev = "08ca7e0"
features = ["test"]
default-features = false

[features]
chunk-prove = ["prover/test", "parallel_syn", "scroll"]
default = ["parallel_syn", "scroll"]
inner-prove = ["prover/test", "parallel_syn", "scroll"]
parallel_syn = [
    "halo2_proofs/parallel_syn",
    "zkevm-circuits/parallel_syn",
    "prover?/parallel_syn",
]
scroll = [
    "bus-mapping/scroll",
    "eth-types/scroll",
    "external-tracer/scroll",
    "mock/scroll",
    "zkevm-circuits/scroll",
    "prover?/scroll",
]

[patch.crates-io.ethers-core]
git = "https://github.com/scroll-tech/ethers-rs.git"
branch = "v2.0.7"
features = []

[patch.crates-io.ethers-signers]
git = "https://github.com/scroll-tech/ethers-rs.git"
branch = "v2.0.7"
features = []

[patch.crates-io.halo2curves]
git = "https://github.com/scroll-tech/halo2curves"
branch = "v0.1.0"
features = []

[patch."https://github.com/privacy-scaling-explorations/bls12_381".bls12_381]
git = "https://github.com/scroll-tech/bls12_381"
branch = "feat/impl_scalar_field"
features = []

[patch."https://github.com/privacy-scaling-explorations/halo2.git".halo2_proofs]
git = "https://github.com/scroll-tech/halo2.git"
branch = "v1.1"
features = []

[patch."https://github.com/privacy-scaling-explorations/poseidon.git".poseidon]
git = "https://github.com/scroll-tech/poseidon.git"
branch = "main"
features = []

# fix me
[patch."https://github.com/scroll-tech/snark-verifier"]
snark-verifier = { git = "https://github.com/scroll-tech//snark-verifier", rev = "114cea6cd025f7daf66b8f0038126a796653e207" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech//snark-verifier", rev = "114cea6cd025f7daf66b8f0038126a796653e207" }

[[bin]]
path = "src/main.rs"
name = "mock-runner"
edition = "2021"
required-features = []
